--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
       </div>
 
       <div style="text-align:center;margin-top:12px">
-        <a class="download" href="#" onclick="window.print();return false">Descargar / Imprimir</a>
+        <a class="download" href="#" onclick="window.print();return false">Imprimir</a> 
+        <a class="download" href="#" onclick="window.print();return false">Descargar </a>
       </div>
     </aside>
 
@@ -259,4 +260,5 @@
     </main>
   </div>
 </body>
+
 </html>
