--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@
     <main class="main card">
       <section class="section">
         <h2>Acerca de mí</h2>
-        <p>Soy estudiante avanzada de Contador Público en la Universidad de Buenos Aires, a 7 materias de recibirme. Desde 2017 me desempeño en X Project, donde trabajo en tareas administrativas y de soporte para entidades financieras y aseguradoras, en procesos de gestión documental, auditoría no presencial y cumplimiento normativo.</p>
-        <p>Además, fundé un emprendimiento de e-commerce en marzo de 2025, donde administro la tienda online, el catálogo, proveedores, campañas digitales y atención al cliente.</p>
-        <p>Actualmente me estoy formando en herramientas de análisis de datos (Excel avanzado, Power BI y SQL) para complementar mi perfil contable y administrativo con competencias tecnológicas.</p>
+        <p>Soy estudiante avanzada de Contador Público en la Universidad de Buenos Aires, a 6 materias de recibirme. Hasta 2025 me desempeñé en X Project, donde adquirí amplia experiencia en tareas administrativas y de soporte para entidades financieras y aseguradoras, participando en procesos de gestión documental, auditoría no presencial y cumplimiento normativo.</p>
+        <p>Además, fundé un emprendimiento de e-commerce en marzo de 2025, donde administro la tienda online, el catálogo, proveedores, campañas digitales y la atención al cliente (www.modobazar.com.ar).</p>
+        <p>Actualmente me estoy formando en herramientas de análisis de datos (Excel avanzado, Power BI y SQL), con el objetivo de fortalecer mi perfil contable-administrativo e integrar la tecnología y el análisis como parte de mi desarrollo profesional.</p>
+        <p>Me considero una persona responsable, organizada y orientada al aprendizaje continuo.</p>
       </section>
 
       <section class="section">
@@ -262,3 +263,4 @@
 </body>
 
 </html>
+
