--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <li>📧 nataliaduarte1130@gmail.com</li>
           <li>📞 +54 9 11 6359 7172</li>
           <li>📍 Quilmes, Buenos Aires, Argentina</li>
-          <li>🔗 linkedin.com/in/</li>
+          <li>🔗 linkedin.com/in/natalia-duarte-4562a738a</li>
         </ul>
       </div>
 
@@ -263,4 +263,5 @@
 </body>
 
 </html>
+
 
