--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
       <div style="text-align:center;margin-top:12px">
         <a class="download" href="#" onclick="window.print();return false">Imprimir</a> 
-        <a class="download" href="#" onclick="window.print();return false">Descargar </a>
+       <a class="download" href="cv-natalia.html" download>Descargar CV</a>      
       </div>
     </aside>
 
@@ -263,5 +263,6 @@
 </body>
 
 </html>
+
 
 
