--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="section">
         <h3 style="margin:8px 0 6px">Contacto</h3>
         <ul class="contact-list">
-          <li>📧 nataliaduarte1130@gmail.com</li>
+        <li>📧 <a href="mailto:nataliaduarte1130@gmail.com?subject=Consulta">nataliaduarte1130@gmail.com</a></li>  
           <li>📞 +54 9 11 6359 7172</li>
           <li>📍 Quilmes, Buenos Aires, Argentina</li>
           <li>🔗 linkedin.com/in/natalia-duarte-4562a738a</li>
@@ -263,6 +263,7 @@
 </body>
 
 </html>
+
 
 
 
