--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <li>📧 <a href="mailto:nataliaduarte1130@gmail.com?subject=Consulta">nataliaduarte1130@gmail.com</a></li>  
           <li>📞 +54 9 11 6359 7172</li>
           <li>📍 Quilmes, Buenos Aires, Argentina</li>
-          <li>🔗 linkedin.com/in/natalia-duarte-4562a738a</li>
+          <li>🔗 <a href="https://www.linkedin.com/in/natalia-duarte-4562a738a" target="_blank">linkedin.com/in/natalia-duarte-4562a738a</a></li>
         </ul>
       </div>
 
@@ -263,6 +263,7 @@
 </body>
 
 </html>
+
 
 
 
