--- a/index.html
+++ b/index.html
@@ -183,7 +183,32 @@
 
       <div style="text-align:center;margin-top:12px">
         <a class="download" href="#" onclick="window.print();return false">Imprimir</a> 
-       <a class="download" href="cv-natalia.pdf" download>Descargar CV</a>      
+        <a class="download" href="#" onclick="downloadPDF()">Descargar PDF</a>
+
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+<script>
+function downloadPDF() {
+  const element = document.body;
+  const opt = {
+    margin: 0,
+    filename: 'CV_Natalia_Duarte.pdf',
+    image: { type: 'jpeg', quality: 0.98 },
+    html2canvas: { scale: 2 },
+    jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+  };
+  html2pdf().set(opt).from(element).save();
+}
+</script>
+
+
+
+
+
+
+
+
+        
+       
       </div>
     </aside>
 
@@ -263,6 +288,7 @@
 </body>
 
 </html>
+
 
 
 
