--- a/index.html
+++ b/index.html
@@ -184,37 +184,21 @@
       <div style="text-align:center;margin-top:12px">
         <a class="download" href="#" onclick="window.print();return false">Imprimir</a> 
         <a class="download" href="#" onclick="downloadPDF()">Descargar PDF</a>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 <script>
 function downloadPDF() {
-  const element = document.getElementById('cv-root');
+  const element = document.body;
   const opt = {
-    margin: [0.3, 0.3, 0.3, 0.3], // márgenes superior, derecha, inferior, izquierda
+    margin: 0,
     filename: 'CV_Natalia_Duarte.pdf',
-    image: { type: 'jpeg', quality: 1 },
-    html2canvas: {
-      scale: 2,           // mejora la resolución
-      useCORS: true,
-      backgroundColor: '#0f1724' // mantiene el fondo oscuro
-    },
-    jsPDF: {
-      unit: 'mm',
-      format: 'a4',
-      orientation: 'portrait'
-    },
-    pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
+    image: { type: 'jpeg', quality: 0.98 },
+    html2canvas: { scale: 1 },
+    jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
   };
-
   html2pdf().set(opt).from(element).save();
 }
 </script>
-
-
-
-
-
-
-        
        
       </div>
     </aside>
@@ -295,6 +279,7 @@ function downloadPDF() {
 </body>
 
 </html>
+
 
 
 
