--- a/index.html
+++ b/index.html
@@ -205,6 +205,16 @@
           <p>Procesamiento de archivos de operaciones financieras como parte de auditorías no presenciales. Control de calidad, trazabilidad documental y cumplimiento normativo mediante listados de PEPs y controles específicos.</p>
         </div>
 
+         <div class="exp-row">
+          <div class="role">Estudio Contable Cerdeira — Asistente/Administrativa Contable </div>
+          <div class="muted"> Marzo 2017 – Agosto 2017· Buenos Aires</div>
+          <p>Cobranzas y seguimiento de cuentas corrientes de clientes. 
+              Descarga y gestión de intimaciones impositivas y organismos fiscales. 
+              Organización y archivo de documentación contable y comprobantes de pago. Control de vencimientos y colaboración en la entrega de 
+              documentación a clientes..</p>
+        </div>
+
+        
         <div class="exp-row">
           <div class="role">RS MODA — Administradora</div>
           <div class="muted">2016 – 2017 · Quilmes Oeste, Buenos Aires</div>
@@ -264,6 +274,7 @@
 </body>
 
 </html>
+
 
 
 
